--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,119 +1,119 @@
 {
   "header": {
-    "features": "Features",
-    "about": "About Us",
-    "services": "Services",
-    "leadership": "Leadership",
-    "pricing": "Pricing",
-    "contact": "Contact",
-    "login": "Portal Login",
-    "get_started": "Get Started",
-    "sign_up": "Sign Up"
+    "features": "বৈশিষ্ট্য",
+    "about": "আমাদের সম্পর্কে",
+    "services": "সেবাসমূহ",
+    "leadership": "নেতৃত্ব",
+    "pricing": "মূল্য তালিকা",
+    "contact": "যোগাযোগ",
+    "login": "পোর্টাল লগইন",
+    "get_started": "শুরু করুন",
+    "sign_up": "নিবন্ধন করুন"
   },
   "footer": {
-    "description": "HNV Solutions is the leading platform for streamlining property management tasks, from tenant communication to financial tracking.",
-    "copyright_text": "HNV Property Management Solutions. All Rights Reserved.",
-    "quick_links": "Quick Links",
-    "legal_links": "Legal",
-    "social_links": "Social"
+    "description": "HNV সলিউশনস ভাড়াটেদের সাথে যোগাযোগ থেকে শুরু করে আর্থিক ট্র্যাকিং পর্যন্ত সম্পত্তি ব্যবস্থাপনার কাজ সহজ করার জন্য একটি নেতৃস্থানীয় প্ল্যাটফর্ম।",
+    "copyright_text": "HNV প্রপার্টি ম্যানেজমেন্ট সলিউশনস। সর্বস্বত্ব সংরক্ষিত।",
+    "quick_links": "দ্রুত লিঙ্ক",
+    "legal_links": "আইনি",
+    "social_links": "সামাজিক"
   },
   "landing": {
-    "hero_title": "The All-in-One Platform for Modern Property Management",
-    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease. HNV provides the tools you need to scale your property business efficiently.",
-    "hero_cta": "Start Your Free Trial"
+    "hero_title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য অল-ইন-ওয়ান প্ল্যাটফর্ম",
+    "hero_subtitle": "স্বয়ংক্রিয়ভাবে কাজ করুন, অর্থ ট্র্যাক করুন এবং ভাড়াটেদের সহজে পরিচালনা করুন। HNV আপনার সম্পত্তি ব্যবসা দক্ষতার সাথে বাড়ানোর জন্য প্রয়োজনীয় সরঞ্জাম সরবরাহ করে।",
+    "hero_cta": "আপনার বিনামূল্যে ট্রায়াল শুরু করুন"
   },
   "auth": {
-    "welcome_back": "Welcome Back!",
-    "login_prompt": "Log in to your account to continue.",
-    "email_address": "Email Address",
-    "password": "Password",
-    "sign_in": "Sign In",
-    "or": "OR",
-    "sign_in_google": "Sign In with Google",
-    "no_account": "Don't have an account?",
-    "sign_up_here": "Sign Up Here",
-    "forgot_password": "Forgot Password?",
-    "forgot_password_title": "Forgot Your Password?",
-    "forgot_password_prompt": "No problem. Enter your email address below, and we'll send you a link to reset it.",
-    "send_reset_link": "Send Reset Link",
-    "remembered_password": "Remembered your password?",
-    "create_account": "Create Your Account",
-    "smarter_management": "A smarter way to manage properties.",
-    "by_signing_in": "By signing in, you agree to our <1>Terms</1> and <3>Privacy Policy</3>.",
-    "you_are_invited": "You're Invited!",
-    "invited_by": "{{inviterName}} has invited you to join their team as an Agent/Manager.",
-    "set_password_new": "Since you're new, please set a password to create your account.",
-    "accept_invitation": "Accept Invitation & Continue",
-    "invalid_token": "This invitation is invalid or has expired.",
-    "return_to_login": "Return to Login",
-    "verifying_invitation": "Verifying Invitation..."
+    "welcome_back": "আবার স্বাগতম!",
+    "login_prompt": "চালিয়ে যেতে আপনার অ্যাকাউন্টে লগ ইন করুন।",
+    "email_address": "ইমেইল ঠিকানা",
+    "password": "পাসওয়ার্ড",
+    "sign_in": "সাইন ইন",
+    "or": "অথবা",
+    "sign_in_google": "Google দিয়ে সাইন ইন করুন",
+    "no_account": "কোনো অ্যাকাউন্ট নেই?",
+    "sign_up_here": "এখানে নিবন্ধন করুন",
+    "forgot_password": "পাসওয়ার্ড ভুলে গেছেন?",
+    "forgot_password_title": "পাসওয়ার্ড ভুলে গেছেন?",
+    "forgot_password_prompt": "কোনো সমস্যা নেই। আপনার ইমেল ঠিকানা লিখুন, আমরা আপনাকে একটি রিসেট লিঙ্ক পাঠাব।",
+    "send_reset_link": "রিসেট লিঙ্ক পাঠান",
+    "remembered_password": "পাসওয়ার্ড মনে পড়েছে?",
+    "create_account": "আপনার অ্যাকাউন্ট তৈরি করুন",
+    "smarter_management": "সম্পত্তি ব্যবস্থাপনার একটি স্মার্ট উপায়।",
+    "by_signing_in": "সাইন ইন করার মাধ্যমে, আপনি আমাদের <1>শর্তাবলী</1> এবং <3>গোপনীয়তা নীতি</3>-তে সম্মত হচ্ছেন।",
+    "you_are_invited": "আপনাকে আমন্ত্রণ জানানো হয়েছে!",
+    "invited_by": "{{inviterName}} আপনাকে এজেন্ট/ম্যানেজার হিসাবে তার দলে যোগদানের জন্য আমন্ত্রণ জানিয়েছেন।",
+    "set_password_new": "যেহেতু আপনি নতুন, আপনার অ্যাকাউন্ট তৈরি করতে একটি পাসওয়ার্ড সেট করুন।",
+    "accept_invitation": "আমন্ত্রণ গ্রহণ করুন এবং চালিয়ে যান",
+    "invalid_token": "এই আমন্ত্রণটি অবৈধ বা মেয়াদোত্তীর্ণ।",
+    "return_to_login": "লগইনে ফিরে যান",
+    "verifying_invitation": "আমন্ত্রণ যাচাই করা হচ্ছে..."
   },
   "dashboard": {
-    "overview": "Overview",
-    "properties": "Properties",
-    "tenants": "Tenants",
-    "payments": "Payments",
-    "expenses": "Expenses",
-    "maintenance": "Maintenance",
-    "cash_flow": "Cash Flow",
-    "reminders": "Reminders",
-    "approvals": "Approvals",
-    "users_invites": "Users & Invites",
-    "billing": "Billing",
-    "audit_log": "Audit Log",
-    "admin_panel": "Admin Panel",
-    "settings": "Settings",
-    "logout": "Logout",
-    "more": "More",
-    "monthly_revenue": "Monthly Revenue",
-    "total_properties": "Total Properties",
-    "active_tenants": "Active Tenants",
-    "occupancy_rate": "Occupancy Rate",
-    "financials_chart_title": "Financials (Last 6 Months)",
-    "rent_status_chart_title": "Rent Payment Status",
-    "overdue_rent_reminders": "Overdue Rent Reminders",
-    "upcoming_lease_expirations": "Upcoming Lease Expirations",
-    "send_reminder": "Send Reminder",
-    "renew_lease": "Renew Lease",
-    "no_overdue_rent": "No tenants with overdue rent.",
-    "no_expiring_leases": "No leases expiring soon.",
-    "loading_data": "Loading Dashboard Data...",
+    "overview": "একনজরে",
+    "properties": "সম্পত্তি",
+    "tenants": "ভাড়াটে",
+    "payments": "পেমেন্টস",
+    "expenses": "খরচ",
+    "maintenance": "রক্ষণাবেক্ষণ",
+    "cash_flow": "নগদ প্রবাহ",
+    "reminders": "অনুস্মারক",
+    "approvals": "অনুমোদন",
+    "users_invites": "ব্যবহারকারী ও আমন্ত্রণ",
+    "billing": "বিলিং",
+    "audit_log": "অডিট লগ",
+    "admin_panel": "অ্যাডমিন প্যানেল",
+    "settings": "সেটিংস",
+    "logout": "লগ আউট",
+    "more": "আরও",
+    "monthly_revenue": "মাসিক আয়",
+    "total_properties": "মোট সম্পত্তি",
+    "active_tenants": "সক্রিয় ভাড়াটে",
+    "occupancy_rate": "দখলের হার",
+    "financials_chart_title": "আর্থিক চিত্র (শেষ ৬ মাস)",
+    "rent_status_chart_title": "ভাড়া প্রদানের অবস্থা",
+    "overdue_rent_reminders": "বকেয়া ভাড়ার অনুস্মারক",
+    "upcoming_lease_expirations": "আসন্ন ইজারার মেয়াদ",
+    "send_reminder": "অনুস্মারক পাঠান",
+    "renew_lease": "ইজারা নবায়ন করুন",
+    "no_overdue_rent": "বকেয়া ভাড়াসহ কোনো ভাড়াটে নেই।",
+    "no_expiring_leases": "শীঘ্রই মেয়াদ শেষ হচ্ছে এমন কোনো ইজারা নেই।",
+    "loading_data": "ড্যাশবোর্ড ডেটা লোড হচ্ছে...",
     "financial_chart": {
-      "revenue": "Revenue",
-      "expenses": "Expenses"
+      "revenue": "রাজস্ব",
+      "expenses": "খরচ"
     }
   },
   "about": {
-    "title": "About HNV Solutions",
-    "subtitle": "We are dedicated to simplifying property management through innovative technology.",
-    "mission_title": "Our Mission",
-    "mission_statement": "To provide user-friendly tools that empower property managers to achieve operational excellence, enhance tenant satisfaction, and maximize profitability.",
-    "vision_title": "Our Vision",
-    "vision_statement": "To be the leading global platform for property management, recognized for our commitment to customer success and continuous innovation."
+    "title": "HNV সলিউশনস সম্পর্কে",
+    "subtitle": "আমরা উদ্ভাবনী প্রযুক্তির মাধ্যমে সম্পত্তি ব্যবস্থাপনা সহজ করার জন্য নিবেদিত।",
+    "mission_title": "আমাদের লক্ষ্য",
+    "mission_statement": "ব্যবহারকারী-বান্ধব সরঞ্জাম সরবরাহ করা যা সম্পত্তি পরিচালকদের অপারেশনাল শ্রেষ্ঠত্ব অর্জন করতে, ভাড়াটেদের সন্তুষ্টি বাড়াতে এবং লাভজনকতা সর্বাধিক করতে সক্ষম করে।",
+    "vision_title": "আমাদের স্বপ্ন",
+    "vision_statement": "সম্পত্তি ব্যবস্থাপনার জন্য বিশ্বব্যাপী নেতৃস্থানীয় প্ল্যাটফর্ম হতে, গ্রাহক সাফল্য এবং অবিচ্ছিন্ন উদ্ভাবনের প্রতি আমাদের অঙ্গীকারের জন্য স্বীকৃত।"
   },
   "pricing": {
-    "title": "Choose The Plan That's Right For You",
-    "subtitle": "Simple, transparent pricing to help you grow. No hidden fees, cancel anytime.",
-    "free": "Free",
-    "choose_plan": "Choose Plan",
-    "disclaimer": "Subscription and billing are managed securely through our payment partner."
+    "title": "আপনার জন্য সঠিক পরিকল্পনাটি বেছে নিন",
+    "subtitle": "সহজ, স্বচ্ছ মূল্য যা আপনাকে বাড়াতে সাহায্য করবে। কোনো লুকানো ফি নেই, যেকোনো সময় বাতিল করুন।",
+    "free": "ফ্রি",
+    "choose_plan": "পরিকল্পনা বেছে নিন",
+    "disclaimer": "সদস্যতা এবং বিলিং আমাদের পেমেন্ট পার্টনারের মাধ্যমে নিরাপদে পরিচালিত হয়।"
   },
   "services": {
-    "tenant_management_title": "Tenant Management",
-    "tenant_management_desc": "Efficiently track tenant information, lease agreements, and communication logs.",
-    "property_tracking_title": "Property Tracking",
-    "property_tracking_desc": "Manage property details, maintenance schedules, and unit availability.",
-    "rent_collection_title": "Rent Collection",
-    "rent_collection_desc": "Automate rent reminders, process online payments, and track financial records.",
-    "title": "Our Services",
-    "subtitle": "Comprehensive solutions tailored for your property management needs."
+    "tenant_management_title": "ভাড়াটে ব্যবস্থাপনা",
+    "tenant_management_desc": "ভাড়াটেদের তথ্য, ইজারা চুক্তি এবং যোগাযোগের লগগুলি দক্ষতার সাথে ট্র্যাক করুন।",
+    "property_tracking_title": "সম্পত্তি ট্র্যাকিং",
+    "property_tracking_desc": "সম্পত্তির বিবরণ, রক্ষণাবেক্ষণের সময়সূচী এবং ইউনিটের প্রাপ্যতা পরিচালনা করুন।",
+    "rent_collection_title": "ভাড়া সংগ্রহ",
+    "rent_collection_desc": "ভাড়া অনুস্মারক স্বয়ংক্রিয় করুন, অনলাইন পেমেন্ট প্রক্রিয়া করুন এবং আর্থিক রেকর্ডগুলি ট্র্যাক করুন।",
+    "title": "আমাদের সেবাসমূহ",
+    "subtitle": "আপনার সম্পত্তি ব্যবস্থাপনার প্রয়োজনের জন্য তৈরি করা ব্যাপক সমাধান।"
   },
   "leadership": {
-    "title": "Meet Our Leadership",
-    "subtitle": "The driving force behind our commitment to excellence and innovation.",
-    "founder_visionary": "Founder & Visionary",
-    "founder_1_quote": "Our vision is to empower property managers with tools that make a real difference.",
-    "founder_2_quote": "Innovation and user experience are at the heart of everything we build.",
-    "coo_quote": "We ensure operational excellence to deliver seamless service to our customers."
+    "title": "আমাদের নেতৃত্ব",
+    "subtitle": "উৎকর্ষ এবং উদ্ভাবনের প্রতি আমাদের অঙ্গীকারের চালিকা শক্তি।",
+    "founder_visionary": "প্রতিষ্ঠাতা ও স্বপ্নদ্রষ্টা",
+    "founder_1_quote": "আমাদের লক্ষ্য হল সম্পত্তি পরিচালকদের এমন সরঞ্জাম দিয়ে শক্তিশালী করা যা সত্যিকারের পরিবর্তন আনে।",
+    "founder_2_quote": "উদ্ভাবন এবং ব্যবহারকারীর অভিজ্ঞতা আমাদের প্রতিটি নির্মাণের কেন্দ্রে রয়েছে।",
+    "coo_quote": "আমরা আমাদের গ্রাহকদের নিরবচ্ছিন্ন পরিষেবা প্রদানের জন্য অপারেশনাল শ্রেষ্ঠত্ব নিশ্চিত করি।"
   }
 }
