--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -15,7 +15,7 @@
     "manual_prompt": "To install, please use the 'Install' option in your browser's menu (usually found in the three-dot menu)."
   },
   "footer": {
-    "description": "HNV Property Management Solutions is the leading platform for streamlining property management tasks, from tenant communication to financial tracking.",
+    "description": "HNV Solutions is the leading platform for streamlining property management tasks, from tenant communication to financial tracking.",
     "copyright_text": "HNV Property Management Solutions. All Rights Reserved.",
     "quick_links": "Quick Links",
     "legal_links": "Legal",
