--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -172,6 +172,22 @@
     "sort": "সাজান",
     "loading_app": "অ্যাপ্লিকেশন লোড হচ্ছে...",
     "welcome_back_user": "আবার স্বাগতম, {{name}}!",
-    "happening_today": "আজ আপনার সম্পত্তিগুলির সাথে কী ঘটছে তা এখানে।"
+    "happening_today": "আজ আপনার সম্পত্তিগুলির সাথে কী ঘটছে তা এখানে।",
+    "analytics": "বিশ্লেষণ",
+    "learn_more": "আরও জানুন"
+  },
+  "landing": {
+    "hero_title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য অল-ইন-ওয়ান প্ল্যাটফর্ম",
+    "hero_subtitle": "স্বয়ংক্রিয়ভাবে কাজ করুন, অর্থ ট্র্যাক করুন এবং ভাড়াটেদের সহজে পরিচালনা করুন। HNV আপনার সম্পত্তি ব্যবসা দক্ষতার সাথে বাড়ানোর জন্য প্রয়োজনীয় সরঞ্জাম সরবরাহ করে।",
+    "hero_cta": "আপনার বিনামূল্যে ট্রায়াল শুরু করুন",
+    "hero_subtitle_main": "আধুনিক সম্পত্তি ব্যবস্থাপনা",
+    "hero_description": "আমাদের অল-ইন-ওয়ান প্ল্যাটফর্মের সাথে আপনার সম্পত্তি ব্যবস্থাপনা সহজ করুন",
+    "why_choose_title": "কেন আমাদের প্ল্যাটফর্ম বেছে নেবেন?",
+    "why_choose_subtitle": "আধুনিক সম্পত্তি পরিচালকদের জন্য তৈরি যারা দক্ষতা, নিরাপত্তা এবং বৃদ্ধি চান।",
+    "real_stats_title": "বিশ্বব্যাপী সম্পত্তি পরিচালকদের দ্বারা বিশ্বস্ত",
+    "properties_managed": "পরিচালিত সম্পত্তি",
+    "active_users": "সক্রিয় ব্যবহারকারী",
+    "countries_served": "পরিষেবা প্রদানকারী দেশ",
+    "uptime_guarantee": "আপটাইম গ্যারান্টি"
   }
 }
