--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -1,82 +1,43 @@
 {
   "header": {
-    "features": "Features",
-    "about": "About Us",
-    "services": "Services",
-    "leadership": "Leadership",
+    "login": "Login",
+    "get_started": "Get Started"
+  },
+  "nav": {
+    "home": "Home",
+    "about": "About",
     "pricing": "Pricing",
-    "contact": "Contact",
-    "login": "Portal Login",
-    "get_started": "Get Started",
-    "sign_up": "Sign Up"
-  },
-  "install_app": {
-    "cta": "Install App",
-    "manual_prompt": "To install, please use the 'Install' option in your browser's menu (usually found in the three-dot menu)."
-  },
-  "footer": {
-    "description": "HNV Solutions is the leading platform for streamlining property management tasks, from tenant communication to financial tracking.",
-    "copyright_text": "HNV Property Management Solutions. All Rights Reserved.",
-    "quick_links": "Quick Links",
-    "legal_links": "Legal",
-    "social_links": "Social"
-  },
-  "landing": {
-    "hero_title": "The All-in-One Platform for Modern Property Management",
-    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease. HNV provides the tools you need to scale your property business efficiently.",
-    "hero_cta": "Start Your Free Trial"
+    "contact": "Contact"
   },
   "auth": {
     "welcome_back": "Welcome Back!",
-    "login_prompt": "Log in to your account to continue.",
+    "sign_in_subtitle": "Sign in to continue to your dashboard",
     "email_address": "Email Address",
     "password": "Password",
     "sign_in": "Sign In",
-    "or": "OR",
-    "sign_in_google": "Sign In with Google",
-    "no_account": "Don't have an account?",
-    "sign_up_here": "Sign Up Here",
-    "forgot_password": "Forgot Password?",
-    "forgot_password_title": "Forgot Your Password?",
-    "forgot_password_prompt": "No problem. Enter your email address below, and we'll send you a link to reset it.",
-    "send_reset_link": "Send Reset Link",
-    "remembered_password": "Remembered your password?",
-    "create_account": "Create Your Account",
-    "smarter_management": "A smarter way to manage properties.",
-    "by_signing_in": "By signing in, you agree to our <1>Terms</1> and <3>Privacy Policy</3>.",
-    "you_are_invited": "You're Invited!",
-    "invited_by": "{{inviterName}} has invited you to join their team as an Agent/Manager.",
-    "set_password_new": "Since you're new, please set a password to create your account.",
-    "accept_invitation": "Accept Invitation & Continue",
-    "invalid_token": "This invitation is invalid or has expired.",
-    "return_to_login": "Return to Login",
-    "verifying_invitation": "Verifying Invitation...",
-    "sign_in_subtitle": "Log in to your account to continue",
-    "enter_email": "Enter your email address",
-    "enter_password": "Enter your password",
     "continue_google": "Continue with Google",
+    "no_account": "Don't have an account?",
     "sign_up": "Sign Up",
-    "full_name": "Full Name",
-    "enter_full_name": "Enter your full name",
-    "role": "Role",
-    "landlord": "Landlord",
-    "agent": "Agent",
-    "tenant": "Tenant",
-    "create_password": "Create a strong password",
-    "confirm_password": "Confirm Password",
-    "join_thousands": "Join thousands of property managers",
-    "have_account": "Already have an account?",
-    "check_email": "Check Your Email!",
-    "verification_sent": "We've sent a verification link to your email. Please check and click the link to activate your account.",
-    "go_to_login": "Go to Login"
+    "or": "OR",
+    "forgot_password": "Forgot Password?"
+  },
+  "common": {
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "cancel": "Cancel",
+    "save": "Save",
+    "welcome_back_user": "Welcome back, {{name}}!",
+    "happening_today": "Here's what's happening with your properties today."
   },
   "dashboard": {
     "overview": "Overview",
     "properties": "Properties",
     "tenants": "Tenants",
-    "payments": "Payments",
-    "expenses": "Expenses",
+    "settings": "Settings",
+    "logout": "Logout",
     "maintenance": "Maintenance",
+    "expenses": "Expenses",
     "cash_flow": "Cash Flow",
     "reminders": "Reminders",
     "approvals": "Approvals",
@@ -84,116 +45,32 @@
     "billing": "Billing",
     "audit_log": "Audit Log",
     "admin_panel": "Admin Panel",
-    "settings": "Settings",
-    "logout": "Logout",
-    "more": "More",
     "monthly_revenue": "Monthly Revenue",
     "total_properties": "Total Properties",
     "active_tenants": "Active Tenants",
     "occupancy_rate": "Occupancy Rate",
-    "financials_chart_title": "Financials (Last 6 Months)",
-    "rent_status_chart_title": "Rent Payment Status",
+    "loading_data": "Loading dashboard data...",
     "overdue_rent_reminders": "Overdue Rent Reminders",
-    "upcoming_lease_expirations": "Upcoming Lease Expirations",
     "send_reminder": "Send Reminder",
+    "no_overdue_rent": "No overdue rent payments",
+    "upcoming_lease_expirations": "Upcoming Lease Expirations",
     "renew_lease": "Renew Lease",
-    "no_overdue_rent": "No tenants with overdue rent.",
-    "no_expiring_leases": "No leases expiring soon.",
-    "loading_data": "Loading Dashboard Data...",
-    "financial_chart": {
-      "revenue": "Revenue",
-      "expenses": "Expenses"
-    }
-  },
-  "about": {
-    "title": "About HNV Solutions",
-    "subtitle": "We are dedicated to simplifying property management through innovative technology.",
-    "mission_title": "Our Mission",
-    "mission_statement": "To provide user-friendly tools that empower property managers to achieve operational excellence, enhance tenant satisfaction, and maximize profitability.",
-    "vision_title": "Our Vision",
-    "vision_statement": "To be the leading global platform for property management, recognized for our commitment to customer success and continuous innovation."
-  },
-  "pricing": {
-    "title": "Choose The Plan That's Right For You",
-    "subtitle": "Simple, transparent pricing to help you grow. No hidden fees, cancel anytime.",
-    "free": "Free",
-    "choose_plan": "Choose Plan",
-    "disclaimer": "Subscription and billing are managed securely through our payment partner."
-  },
-  "services": {
-    "tenant_management_title": "Tenant Management",
-    "tenant_management_desc": "Efficiently track tenant information, lease agreements, and communication logs.",
-    "property_tracking_title": "Property Tracking",
-    "property_tracking_desc": "Manage property details, maintenance schedules, and unit availability.",
-    "rent_collection_title": "Rent Collection",
-    "rent_collection_desc": "Automate rent reminders, process online payments, and track financial records.",
-    "title": "Our Services",
-    "subtitle": "Comprehensive solutions tailored for your property management needs."
-  },
-  "leadership": {
-    "title": "Meet Our Leadership",
-    "subtitle": "The driving force behind our commitment to excellence and innovation.",
-    "founder_visionary": "Founder & Visionary",
-    "founder_1_quote": "Our vision is to empower property managers with tools that make a real difference.",
-    "founder_2_quote": "Innovation and user experience are at the heart of everything we build.",
-    "coo_quote": "We ensure operational excellence to deliver seamless service to our customers."
-  },
-  "property": {
-    "add_property": "Add Property",
-    "add_new_property": "Add New Property",
-    "property_name": "Property Name",
-    "enter_property_name": "Enter property name",
-    "address": "Address",
-    "street_address": "Street Address",
-    "city": "City",
-    "state": "State",
-    "zip_code": "Zip Code",
-    "number_of_units": "Number of Units",
-    "property_image": "Property Image",
-    "click_to_upload": "Click to upload image",
-    "save_property": "Save Property",
-    "saving": "Saving...",
-    "loading_properties": "Loading properties...",
-    "no_properties_yet": "No Properties Yet",
-    "add_first_property": "Add Your First Property",
-    "view": "View",
-    "edit": "Edit",
-    "units": "Units",
-    "unit": "Unit",
-    "active": "Active",
-    "inactive": "Inactive",
-    "manage_portfolio": "Manage your property portfolio"
-  },
-  "common": {
-    "loading": "Loading...",
-    "error": "Error",
-    "success": "Success",
-    "close": "Close",
-    "save": "Save",
-    "cancel": "Cancel",
-    "delete": "Delete",
-    "confirm": "Confirm",
-    "search": "Search",
-    "filter": "Filter",
-    "sort": "Sort",
-    "loading_app": "Loading Application...",
-    "welcome_back_user": "Welcome back, {{name}}!",
-    "happening_today": "Here's what's happening with your properties today.",
-    "analytics": "Analytics",
-    "learn_more": "Learn More"
+    "no_expiring_leases": "No expiring leases",
+    "financials_chart_title": "Financial Overview",
+    "rent_status_chart_title": "Rent Status"
   },
   "landing": {
     "hero_title": "The All-in-One Platform for Modern Property Management",
-    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease. HNV provides the tools you need to scale your property business efficiently.",
+    "hero_subtitle": "Automate tasks, track finances, and manage tenants with ease.",
     "hero_cta": "Start Your Free Trial",
-    "hero_subtitle_main": "Modern Property Management",
-    "hero_description": "Streamline your property management with our all-in-one platform",
-    "why_choose_title": "Why Choose Our Platform?",
-    "why_choose_subtitle": "Built for modern property managers who demand efficiency, security, and growth.",
     "real_stats_title": "Trusted by Property Managers Worldwide",
     "properties_managed": "Properties Managed",
     "active_users": "Active Users",
     "countries_served": "Countries Served",
     "uptime_guarantee": "Uptime Guarantee"
+  },
+  "pricing": {
+    "free": "Free",
+    "choose_plan": "Choose Plan"
   }
 }
