--- a/frontend/public/locales/bn/translation.json
+++ b/frontend/public/locales/bn/translation.json
@@ -1,77 +1,43 @@
 {
   "header": {
-    "features": "বৈশিষ্ট্য",
-    "about": "আমাদের সম্পর্কে",
-    "services": "সেবাসমূহ",
-    "leadership": "নেতৃত্ব",
+    "login": "লগইন",
+    "get_started": "শুরু করুন"
+  },
+  "nav": {
+    "home": "হোম",
+    "about": "সম্পর্কে",
     "pricing": "মূল্য তালিকা",
-    "contact": "যোগাযোগ",
-    "login": "পোর্টাল লগইন",
-    "get_started": "শুরু করুন",
-    "sign_up": "নিবন্ধন করুন"
-  },
-  "footer": {
-    "description": "HNV সলিউশনস ভাড়াটেদের সাথে যোগাযোগ থেকে শুরু করে আর্থিক ট্র্যাকিং পর্যন্ত সম্পত্তি ব্যবস্থাপনার কাজ সহজ করার জন্য একটি নেতৃস্থানীয় প্ল্যাটফর্ম।",
-    "copyright_text": "HNV প্রপার্টি ম্যানেজমেন্ট সলিউশনস। সর্বস্বত্ব সংরক্ষিত।",
-    "quick_links": "দ্রুত লিঙ্ক",
-    "legal_links": "আইনি",
-    "social_links": "সামাজিক"
-  },
-  "landing": {
-    "hero_title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য অল-ইন-ওয়ান প্ল্যাটফর্ম",
-    "hero_subtitle": "স্বয়ংক্রিয়ভাবে কাজ করুন, অর্থ ট্র্যাক করুন এবং ভাড়াটেদের সহজে পরিচালনা করুন। HNV আপনার সম্পত্তি ব্যবসা দক্ষতার সাথে বাড়ানোর জন্য প্রয়োজনীয় সরঞ্জাম সরবরাহ করে।",
-    "hero_cta": "আপনার বিনামূল্যে ট্রায়াল শুরু করুন"
+    "contact": "যোগাযোগ"
   },
   "auth": {
     "welcome_back": "আবার স্বাগতম!",
-    "login_prompt": "চালিয়ে যেতে আপনার অ্যাকাউন্টে লগ ইন করুন।",
+    "sign_in_subtitle": "চালিয়ে যেতে আপনার অ্যাকাউন্টে লগ ইন করুন",
     "email_address": "ইমেইল ঠিকানা",
     "password": "পাসওয়ার্ড",
     "sign_in": "সাইন ইন",
-    "or": "অথবা",
-    "sign_in_google": "Google দিয়ে সাইন ইন করুন",
-    "no_account": "কোনো অ্যাকাউন্ট নেই?",
-    "sign_up_here": "এখানে নিবন্ধন করুন",
-    "forgot_password": "পাসওয়ার্ড ভুলে গেছেন?",
-    "forgot_password_title": "পাসওয়ার্ড ভুলে গেছেন?",
-    "forgot_password_prompt": "কোনো সমস্যা নেই। আপনার ইমেল ঠিকানা লিখুন, আমরা আপনাকে একটি রিসেট লিঙ্ক পাঠাব।",
-    "send_reset_link": "রিসেট লিঙ্ক পাঠান",
-    "remembered_password": "পাসওয়ার্ড মনে পড়েছে?",
-    "create_account": "আপনার অ্যাকাউন্ট তৈরি করুন",
-    "smarter_management": "সম্পত্তি ব্যবস্থাপনার একটি স্মার্ট উপায়।",
-    "by_signing_in": "সাইন ইন করার মাধ্যমে, আপনি আমাদের <1>শর্তাবলী</1> এবং <3>গোপনীয়তা নীতি</3>-তে সম্মত হচ্ছেন।",
-    "you_are_invited": "আপনাকে আমন্ত্রণ জানানো হয়েছে!",
-    "invited_by": "{{inviterName}} আপনাকে এজেন্ট/ম্যানেজার হিসাবে তার দলে যোগদানের জন্য আমন্ত্রণ জানিয়েছেন।",
-    "set_password_new": "যেহেতু আপনি নতুন, আপনার অ্যাকাউন্ট তৈরি করতে একটি পাসওয়ার্ড সেট করুন।",
-    "accept_invitation": "আমন্ত্রণ গ্রহণ করুন এবং চালিয়ে যান",
-    "invalid_token": "এই আমন্ত্রণটি অবৈধ বা মেয়াদোত্তীর্ণ।",
-    "return_to_login": "লগইনে ফিরে যান",
-    "verifying_invitation": "আমন্ত্রণ যাচাই করা হচ্ছে...",
-    "sign_in_subtitle": "চালিয়ে যেতে আপনার অ্যাকাউন্টে লগ ইন করুন",
-    "enter_email": "আপনার ইমেইল ঠিকানা লিখুন",
-    "enter_password": "আপনার পাসওয়ার্ড লিখুন",
     "continue_google": "Google দিয়ে চালিয়ে যান",
+    "no_account": "কোনো অ্যাকাউন্ট নেই?",
     "sign_up": "নিবন্ধন করুন",
-    "full_name": "পূর্ণ নাম",
-    "enter_full_name": "আপনার পূর্ণ নাম লিখুন",
-    "role": "ভূমিকা",
-    "landlord": "বাড়িওয়ালা",
-    "agent": "এজেন্ট",
-    "tenant": "ভাড়াটে",
-    "create_password": "একটি শক্তিশালী পাসওয়ার্ড তৈরি করুন",
-    "confirm_password": "পাসওয়ার্ড নিশ্চিত করুন",
-    "join_thousands": "হাজার হাজার সম্পত্তি পরিচালকের সাথে যুক্ত হন",
-    "have_account": "ইতিমধ্যে অ্যাকাউন্ট আছে?",
-    "check_email": "আপনার ইমেইল পরীক্ষা করুন!",
-    "verification_sent": "আমরা আপনার ইমেইলে একটি যাচাইকরণ লিঙ্ক পাঠিয়েছি। অনুগ্রহ করে পরীক্ষা করুন এবং আপনার অ্যাকাউন্ট সক্রিয় করতে লিঙ্কে ক্লিক করুন।",
-    "go_to_login": "লগইনে যান"
+    "or": "অথবা",
+    "forgot_password": "পাসওয়ার্ড ভুলে গেছেন?"
+  },
+  "common": {
+    "loading": "লোড হচ্ছে...",
+    "error": "ত্রুটি",
+    "success": "সফল",
+    "cancel": "বাতিল করুন",
+    "save": "সংরক্ষণ করুন",
+    "welcome_back_user": "আবার স্বাগতম, {{name}}!",
+    "happening_today": "আজ আপনার সম্পত্তিগুলির সাথে যা ঘটছে।"
   },
   "dashboard": {
     "overview": "একনজরে",
     "properties": "সম্পত্তি",
     "tenants": "ভাড়াটে",
-    "expenses": "খরচ",
+    "settings": "সেটিংস",
+    "logout": "লগ আউট",
     "maintenance": "রক্ষণাবেক্ষণ",
+    "expenses": "খরচ",
     "cash_flow": "নগদ প্রবাহ",
     "reminders": "অনুস্মারক",
     "approvals": "অনুমোদন",
@@ -79,115 +45,32 @@
     "billing": "বিলিং",
     "audit_log": "অডিট লগ",
     "admin_panel": "অ্যাডমিন প্যানেল",
-    "settings": "সেটিংস",
-    "logout": "লগ আউট",
     "monthly_revenue": "মাসিক আয়",
     "total_properties": "মোট সম্পত্তি",
     "active_tenants": "সক্রিয় ভাড়াটে",
     "occupancy_rate": "দখলের হার",
-    "financials_chart_title": "আর্থিক চিত্র (শেষ ৬ মাস)",
-    "rent_status_chart_title": "ভাড়া প্রদানের অবস্থা",
-    "overdue_rent_reminders": "বকেয়া ভাড়ার অনুস্মারক",
-    "upcoming_lease_expirations": "আসন্ন ইজারার মেয়াদ",
-    "send_reminder": "অনুস্মারক পাঠান",
-    "renew_lease": "ইজারা নবায়ন করুন",
-    "no_overdue_rent": "বকেয়া ভাড়াসহ কোনো ভাড়াটে নেই।",
-    "no_expiring_leases": "শীঘ্রই মেয়াদ শেষ হচ্ছে এমন কোনো ইজারা নেই।",
     "loading_data": "ড্যাশবোর্ড ডেটা লোড হচ্ছে...",
-    "financial_chart": {
-      "revenue": "রাজস্ব",
-      "expenses": "খরচ"
-    }
-  },
-  "about": {
-    "title": "HNV সলিউশনস সম্পর্কে",
-    "subtitle": "আমরা উদ্ভাবনী প্রযুক্তির মাধ্যমে সম্পত্তি ব্যবস্থাপনা সহজ করার জন্য নিবেদিত।",
-    "mission_title": "আমাদের লক্ষ্য",
-    "mission_statement": "ব্যবহারকারী-বান্ধব সরঞ্জাম সরবরাহ করা যা সম্পত্তি পরিচালকদের অপারেশনাল শ্রেষ্ঠত্ব অর্জন করতে, ভাড়াটেদের সন্তুষ্টি বাড়াতে এবং লাভজনকতা সর্বাধিক করতে সক্ষম করে।",
-    "vision_title": "আমাদের স্বপ্ন",
-    "vision_statement": "সম্পত্তি ব্যবস্থাপনার জন্য বিশ্বব্যাপী নেতৃস্থানীয় প্ল্যাটফর্ম হতে, গ্রাহক সাফল্য এবং অবিচ্ছিন্ন উদ্ভাবনের প্রতি আমাদের অঙ্গীকারের জন্য স্বীকৃত।"
-  },
-  "pricing": {
-    "title": "আপনার জন্য সঠিক পরিকল্পনাটি বেছে নিন",
-    "subtitle": "সহজ, স্বচ্ছ মূল্য যা আপনাকে বাড়াতে সাহায্য করবে। কোনো লুকানো ফি নেই, যেকোনো সময় বাতিল করুন।",
-    "free": "ফ্রি",
-    "choose_plan": "পরিকল্পনা বেছে নিন",
-    "disclaimer": "সদস্যতা এবং বিলিং আমাদের পেমেন্ট পার্টনারের মাধ্যমে নিরাপদে পরিচালিত হয়।"
-  },
-  "services": {
-    "tenant_management_title": "ভাড়াটে ব্যবস্থাপনা",
-    "tenant_management_desc": "ভাড়াটেদের তথ্য, ইজারা চুক্তি এবং যোগাযোগের লগগুলি দক্ষতার সাথে ট্র্যাক করুন।",
-    "property_tracking_title": "সম্পত্তি ট্র্যাকিং",
-    "property_tracking_desc": "সম্পত্তির বিবরণ, রক্ষণাবেক্ষণের সময়সূচী এবং ইউনিটের প্রাপ্যতা পরিচালনা করুন।",
-    "rent_collection_title": "ভাড়া সংগ্রহ",
-    "rent_collection_desc": "ভাড়া অনুস্মারক স্বয়ংক্রিয় করুন, অনলাইন পেমেন্ট প্রক্রিয়া করুন এবং আর্থিক রেকর্ডগুলি ট্র্যাক করুন।",
-    "title": "আমাদের সেবাসমূহ",
-    "subtitle": "আপনার সম্পত্তি ব্যবস্থাপনার প্রয়োজনের জন্য তৈরি করা ব্যাপক সমাধান।"
-  },
-  "leadership": {
-    "title": "আমাদের নেতৃত্ব",
-    "subtitle": "উৎকর্ষ এবং উদ্ভাবনের প্রতি আমাদের অঙ্গীকারের চালিকা শক্তি।",
-    "founder_visionary": "প্রতিষ্ঠাতা ও স্বপ্নদ্রষ্টা",
-    "founder_1_quote": "আমাদের লক্ষ্য হল সম্পত্তি পরিচালকদের এমন সরঞ্জাম দিয়ে শক্তিশালী করা যা সত্যিকারের পরিবর্তন আনে।",
-    "founder_2_quote": "উদ্ভাবন এবং ব্যবহারকারীর অভিজ্ঞতা আমাদের প্রতিটি নির্মাণের কেন্দ্রে রয়েছে।",
-    "coo_quote": "আমরা আমাদের গ্রাহকদের নিরবচ্ছিন্ন পরিষেবা প্রদানের জন্য অপারেশনাল শ্রেষ্ঠত্ব নিশ্চিত করি।"
-  },
-  "property": {
-    "add_property": "সম্পত্তি যোগ করুন",
-    "add_new_property": "নতুন সম্পত্তি যোগ করুন",
-    "property_name": "সম্পত্তির নাম",
-    "enter_property_name": "সম্পত্তির নাম লিখুন",
-    "address": "ঠিকানা",
-    "street_address": "রাস্তার ঠিকানা",
-    "city": "শহর",
-    "state": "রাজ্য",
-    "zip_code": "জিপ কোড",
-    "number_of_units": "ইউনিটের সংখ্যা",
-    "property_image": "সম্পত্তির ছবি",
-    "click_to_upload": "ছবি আপলোড করতে ক্লিক করুন",
-    "save_property": "সম্পত্তি সংরক্ষণ করুন",
-    "saving": "সংরক্ষণ করা হচ্ছে...",
-    "loading_properties": "সম্পত্তি লোড হচ্ছে...",
-    "no_properties_yet": "এখনও কোনো সম্পত্তি নেই",
-    "add_first_property": "আপনার প্রথম সম্পত্তি যোগ করুন",
-    "view": "দেখুন",
-    "edit": "সম্পাদনা",
-    "units": "ইউনিট",
-    "unit": "ইউনিট",
-    "active": "সক্রিয়",
-    "inactive": "নিষ্ক্রিয়",
-    "manage_portfolio": "আপনার সম্পত্তি পোর্টফোলিও পরিচালনা করুন"
-  },
-  "common": {
-    "loading": "লোড হচ্ছে...",
-    "error": "ত্রুটি",
-    "success": "সফল",
-    "close": "বন্ধ করুন",
-    "save": "সংরক্ষণ করুন",
-    "cancel": "বাতিল করুন",
-    "delete": "মুছে ফেলুন",
-    "confirm": "নিশ্চিত করুন",
-    "search": "অনুসন্ধান",
-    "filter": "ফিল্টার",
-    "sort": "সাজান",
-    "loading_app": "অ্যাপ্লিকেশন লোড হচ্ছে...",
-    "welcome_back_user": "আবার স্বাগতম, {{name}}!",
-    "happening_today": "আজ আপনার সম্পত্তিগুলির সাথে কী ঘটছে তা এখানে।",
-    "analytics": "বিশ্লেষণ",
-    "learn_more": "আরও জানুন"
+    "overdue_rent_reminders": "বকেয়া ভাড়া অনুস্মারক",
+    "send_reminder": "অনুস্মারক পাঠান",
+    "no_overdue_rent": "কোনো বকেয়া ভাড়া নেই",
+    "upcoming_lease_expirations": "আসন্ন লিজ মেয়াদ শেষ",
+    "renew_lease": "লিজ নবায়ন",
+    "no_expiring_leases": "কোনো মেয়াদ শেষ হওয়া লিজ নেই",
+    "financials_chart_title": "আর্থিক সংক্ষিপ্তসার",
+    "rent_status_chart_title": "ভাড়ার অবস্থা"
   },
   "landing": {
     "hero_title": "আধুনিক সম্পত্তি ব্যবস্থাপনার জন্য অল-ইন-ওয়ান প্ল্যাটফর্ম",
-    "hero_subtitle": "স্বয়ংক্রিয়ভাবে কাজ করুন, অর্থ ট্র্যাক করুন এবং ভাড়াটেদের সহজে পরিচালনা করুন। HNV আপনার সম্পত্তি ব্যবসা দক্ষতার সাথে বাড়ানোর জন্য প্রয়োজনীয় সরঞ্জাম সরবরাহ করে।",
+    "hero_subtitle": "স্বয়ংক্রিয়ভাবে কাজ করুন, অর্থ ট্র্যাক করুন এবং ভাড়াটেদের সহজে পরিচালনা করুন।",
     "hero_cta": "আপনার বিনামূল্যে ট্রায়াল শুরু করুন",
-    "hero_subtitle_main": "আধুনিক সম্পত্তি ব্যবস্থাপনা",
-    "hero_description": "আমাদের অল-ইন-ওয়ান প্ল্যাটফর্মের সাথে আপনার সম্পত্তি ব্যবস্থাপনা সহজ করুন",
-    "why_choose_title": "কেন আমাদের প্ল্যাটফর্ম বেছে নেবেন?",
-    "why_choose_subtitle": "আধুনিক সম্পত্তি পরিচালকদের জন্য তৈরি যারা দক্ষতা, নিরাপত্তা এবং বৃদ্ধি চান।",
-    "real_stats_title": "বিশ্বব্যাপী সম্পত্তি পরিচালকদের দ্বারা বিশ্বস্ত",
+    "real_stats_title": "বিশ্বব্যাপী সম্পত্তি ব্যবস্থাপকদের দ্বারা বিশ্বস্ত",
     "properties_managed": "পরিচালিত সম্পত্তি",
     "active_users": "সক্রিয় ব্যবহারকারী",
-    "countries_served": "পরিষেবা প্রদানকারী দেশ",
+    "countries_served": "সেবা প্রদানকৃত দেশ",
     "uptime_guarantee": "আপটাইম গ্যারান্টি"
+  },
+  "pricing": {
+    "free": "বিনামূল্যে",
+    "choose_plan": "প্ল্যান নির্বাচন করুন"
   }
 }
